--- a/public/collapse.html
+++ b/public/collapse.html
@@ -49,26 +49,26 @@
     <div class="flex-col-2-3">
       <h1>Collapse styles</h1>
 
-      <div class="collapse">
+      <div class="collapse collapsible">
 
           <div class="collapse-toggle">
               <h2><code>div.collapse</code></h2>
               <p><code>div.collapse-toggle</code> can also contain <code>h</code> and <code>p</code> tags.</p>
           </div>
           <div class="collapse-content">
-              <p>Collapse structure wrapped inside <code>div.collapse</code></p>
+              <p>Collapse structure wrapped inside <code>div.collapse.collapsible</code></p>
               <a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
           </div>
 
       </div>
 
-      <div class="collapse collapse--aqua">
+      <div class="collapse collapsible--aqua">
 
           <div class="collapse-toggle">
               Unstyled content inside <code>div.collapse-toggle</code>
           </div>
           <div class="collapse-content">
-              <p>Collapse structure wrapped inside <code>div.collapse.collapse--aqua</code></p>
+              <p>Collapse structure wrapped inside <code>div.collapse.collapsible--aqua</code></p>
               <a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
           </div>
 
@@ -76,31 +76,31 @@
               <p>two</p><p>paragraphs</p>
           </div>
           <div class="collapse-content">
-              <p>Collapse structure wrapped inside <code>div.collapse.collapse--aqua</code></p>
+              <p>Collapse structure wrapped inside <code>div.collapse.collapsible--aqua</code></p>
               <a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
           </div>
 
       </div>
 
-      <div class="collapse collapse--green">
+      <div class="collapse collapsible--green">
 
           <div class="collapse-toggle">
               Unstyled content inside <code>div.collapse-toggle</code>
           </div>
           <div class="collapse-content">
-              <p>Collapse structure wrapped inside <code>div.collapse.collapse--green</code></p>
+              <p>Collapse structure wrapped inside <code>div.collapse.collapsible--green</code></p>
               <a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
           </div>
 
       </div>
 
-      <div class="collapse collapse--red">
+      <div class="collapse collapsible--red">
 
           <div class="collapse-toggle">
               Unstyled content inside <code>div.collapse-toggle</code>
           </div>
           <div class="collapse-content">
-              <p>Collapse structure wrapped inside <code>div.collapse.collapse--red</code></p>
+              <p>Collapse structure wrapped inside <code>div.collapse.collapsible--red</code></p>
               <a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
           </div>
 
