--- a/public/consumer-nav.html
+++ b/public/consumer-nav.html
@@ -177,24 +177,18 @@
 
                         <p>Doing the proper checks can help save you distress and money down the line.</p>
 
-                        <div class="steps steps--ordered" id="overview">
-                            <h4>On this page</h4><a href="#step1"><span class="steps--number">1</span>
-
-                            <p><strong>Make sure a trader is trustworthy</strong></p></a> <a href="#step2"><span class="steps--number">2</span>
-
-                            <p><strong>Buying from an auction</strong></p></a> <a href="#step3"><span class="steps--number">3</span>
-
-                            <p><strong>Check a car's history</strong></p></a> <a href="#step4"><span class="steps--number">4</span>
-
-                            <p><strong>Inspect the car and take a test drive</strong></p></a> <a href="#step5"><span class="steps--number">5</span>
-
-                            <p><strong>If you’re still not sure - get an independent report</strong></p></a> <a href="#step6"><span class="steps--number">6</span>
-
-                            <p><strong>When you buy the car</strong></p></a> <a href="#step7"><span class="steps--number">7</span>
-
-                            <p><strong>How to pay</strong></p></a> <a href="#step8"><span class="steps--number">8</span>
-
-                            <p><strong>Further help</strong></p></a>
+                        <div class="steps" id="overview">
+                            <h4>On this page</h4>
+                            <ul>
+                                <li><a href="#step1">Make sure a trader is trustworthy</a></li>
+                                <li><a href="#step2">Buying from an auction</a></li>
+                                <li><a href="#step3">Check a car's history</a></li>
+                                <li><a href="#step4">Inspect the car and take a test drive</a></li>
+                                <li><a href="#step5">Get a written contract</a></li>
+                                <li><a href="#step6">When you buy the car</a></li>
+                                <li><a href="#step7">How to pay</a></li>
+                                <li><a href="#step8">Further help</a></li>
+                            </ul>
                         </div>
 
                         <section id="step1">
@@ -467,102 +461,107 @@
                         </ul>
                     </li>
                 </ul>
+            </nav>
 
-                <div class="steps--navigation sticker">
-                    <a href="#overview">
-                    <h4>On this page</h4></a>
+            <ul class="side-nav collapse nav--beta">
 
+                <li class="collapse-toggle open">On this page</li>
+                <li class="collapse-content" style="display: list-item;"><ul>
+                    <li><a href="#step1">Make sure a trader is trustworthy</a></li>
+                    <li><a href="#step2">Buying from an auction</a></li>
+                    <li><a href="#step3">Check a car's history</a></li>
+                    <li><a href="#step4">Inspect the car and take a test drive</a></li>
+                    <li><a href="#step5">Get a written contract</a></li>
+                    <li><a href="#step6">When you buy the car</a></li>
+                    <li><a href="#step7">How to pay</a></li>
+                    <li><a href="#step8">Further help</a></li>
+                </ul></li>
+
+                <li class="collapse-toggle">On this page</li>
+                <li class="collapse-content"><ul>
+                    <li><a href="#step1">Make sure a trader is trustworthy</a></li>
+                    <li><a href="#step2">Buying from an auction</a></li>
+                    <li><a href="#step3">Check a car's history</a></li>
+                    <li><a href="#step4">Inspect the car and take a test drive</a></li>
+                    <li><a href="#step5">Get a written contract</a></li>
+                    <li><a href="#step6">When you buy the car</a></li>
+                    <li><a href="#step7">How to pay</a></li>
+                    <li><a href="#step8">Further help</a></li>
+                </ul></li>
+            </ul>
+
+            <nav class="side-nav">
+                <div class="steps--navigation">
+                    <a href="#overview" class="title"><h4>On this page</h4></a>
                     <ul>
-                        <li>
-                            <a class="steps--navigation__link" href="#step1"><span>1</span>Make sure a trader is trustworthy</a>
-                        </li>
-
-                        <li>
-                            <a class="steps--navigation__link" href="#step2"><span>2</span>Buying from an auction</a>
-                        </li>
-
-                        <li>
-                            <a class="steps--navigation__link" href="#step3"><span>3</span>Check a car's history</a>
-                        </li>
-
-                        <li>
-                            <a class="steps--navigation__link" href="#step4"><span>4</span>Inspect the car and take a test drive</a>
-                        </li>
-
-                        <li>
-                            <a class="steps--navigation__link" href="#step5"><span>5</span>Get a written contract</a>
-                        </li>
-
-                        <li>
-                            <a class="steps--navigation__link" href="#step6"><span>6</span>When you buy the car</a>
-                        </li>
-
-                        <li>
-                            <a class="steps--navigation__link" href="#step7"><span>7</span>How to pay</a>
-                        </li>
-
-                        <li>
-                            <a class="steps--navigation__link" href="#step8"><span>8</span>Further help</a>
-                        </li>
+                        <li><a href="#step1">Make sure a trader is trustworthy</a></li>
+                        <li><a href="#step2">Buying from an auction</a></li>
+                        <li><a href="#step3">Check a car's history</a></li>
+                        <li><a href="#step4">Inspect the car and take a test drive</a></li>
+                        <li><a href="#step5">Get a written contract</a></li>
+                        <li><a href="#step6">When you buy the car</a></li>
+                        <li><a href="#step7">How to pay</a></li>
+                        <li><a href="#step8">Further help</a></li>
                     </ul>
                 </div>
-
-                <ul class="steps--navigation--fixed">
-                    <li class="steps--navigation--fixed__link"><span class="#step1"><strong>1</strong> Make sure a trader is trustworthy</span></li>
-
-                    <li class="steps--navigation--fixed__link"><span class="#step2"><strong>2</strong> Buying from an auction</span></li>
-
-                    <li class="steps--navigation--fixed__link"><span class="#step3"><strong>3</strong> Check a car's history</span></li>
-
-                    <li class="steps--navigation--fixed__link"><span class="#step4"><strong>4</strong> Inspect the car and take a test drive</span></li>
-
-                    <li class="steps--navigation--fixed__link"><span class="#step5"><strong>5</strong> Get a written contract</span></li>
-
-                    <li class="steps--navigation--fixed__link"><span class="#step6"><strong>6</strong> When you buy the car</span></li>
-
-                    <li class="steps--navigation--fixed__link"><span class="#step7"><strong>7</strong> How to pay</span></li>
-
-                    <li class="steps--navigation--fixed__link"><span class="#step8"><strong>8</strong> Further help</span></li>
-                </ul>
-
-                <ul class="steps--navigation--overlay">
-                    <li class="steps--navigation--overlay__link close">
-                        <a>On this page</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step1"><strong>1</strong> Make sure a trader is trustworthy</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step2"><strong>2</strong> Buying from an auction</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step3"><strong>3</strong> Check a car's history</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step4"><strong>4</strong> Inspect the car and take a test drive</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step5"><strong>5</strong> Get a written contract</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step6"><strong>6</strong> When you buy the car</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step6"><strong>7</strong> How to pay</a>
-                    </li>
-
-                    <li class="steps--navigation--overlay__link">
-                        <a href="#step6"><strong>8</strong> Further help</a>
-                    </li>
-                </ul>
             </nav>
+
+            <ul class="steps--navigation--fixed">
+                <li class="steps--navigation--fixed__link"><span class="#step1"><strong>1</strong> Make sure a trader is trustworthy</span></li>
+
+                <li class="steps--navigation--fixed__link"><span class="#step2"><strong>2</strong> Buying from an auction</span></li>
+
+                <li class="steps--navigation--fixed__link"><span class="#step3"><strong>3</strong> Check a car's history</span></li>
+
+                <li class="steps--navigation--fixed__link"><span class="#step4"><strong>4</strong> Inspect the car and take a test drive</span></li>
+
+                <li class="steps--navigation--fixed__link"><span class="#step5"><strong>5</strong> Get a written contract</span></li>
+
+                <li class="steps--navigation--fixed__link"><span class="#step6"><strong>6</strong> When you buy the car</span></li>
+
+                <li class="steps--navigation--fixed__link"><span class="#step7"><strong>7</strong> How to pay</span></li>
+
+                <li class="steps--navigation--fixed__link"><span class="#step8"><strong>8</strong> Further help</span></li>
+            </ul>
+
+            <ul class="steps--navigation--overlay">
+                <li class="steps--navigation--overlay__link close">
+                    <a>On this page</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step1"><strong>1</strong> Make sure a trader is trustworthy</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step2"><strong>2</strong> Buying from an auction</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step3"><strong>3</strong> Check a car's history</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step4"><strong>4</strong> Inspect the car and take a test drive</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step5"><strong>5</strong> Get a written contract</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step6"><strong>6</strong> When you buy the car</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step6"><strong>7</strong> How to pay</a>
+                </li>
+
+                <li class="steps--navigation--overlay__link">
+                    <a href="#step6"><strong>8</strong> Further help</a>
+                </li>
+            </ul>
+
         </div>
     </div>
 
