--- a/public/consumer-nav.html
+++ b/public/consumer-nav.html
@@ -29,7 +29,7 @@
     <script src="../libs/javascript/vendor/jquery.sticky.js"></script>
 </head>
 
-<body class="beta">
+<body class="">
     <div class="skip-nav">
         <a class="screenreader screenreader--focusable" href="">Skip to content</a> <a class="screenreader screenreader--focusable" href="">Skip to footer</a>
     </div>
