--- a/README.html
+++ b/README.html
@@ -8,10 +8,13 @@
 
 <h2 id="www.citizensadvice.org.ukdesignelements">www.citizensadvice.org.uk design elements</h2>
 
-<p>The design elements repository is used for three purposes:
-1. A resource for design styles, to be referenced by other Citizens Advice digital services
-2. A visual guide to show examples of design patterns and approved design styles
-3. A location to develop and test new patterns</p>
+<p>The design elements repository is used for three purposes:</p>
+
+<ol>
+<li>A resource for design styles, to be referenced by other Citizens Advice digital services</li>
+<li>A visual guide to show examples of design patterns and approved design styles</li>
+<li>A location to develop and test new patterns</li>
+</ol>
 
 <blockquote>
 <p>Alternate name title needed, possibly cab-style-guide</p>
