--- a/README.html
+++ b/README.html
@@ -66,7 +66,7 @@
 
 <h3 id="workingprocess">Working process</h3>
 
-<p>Currently there is a second file site-new.less that directly compiles everything into it, rather that site.less. This allows us to run a &#8216;cleanup&#8217; stylesheet and test stylesheet alongside one another. Make all clean up changes to site-new.less.</p>
+<p>Currently there is a second file site-new.less that directly compiles everything into it, rather than site.less. This allows us to run a &#8216;cleanup&#8217; stylesheet and test stylesheet alongside one another. Make all clean up changes to site-new.less.</p>
 
 <p>site-new.less currently imports every file directly, rather than using imports of import files. This helps keep track of all the files.</p>
 
