--- a/README.html
+++ b/README.html
@@ -79,6 +79,7 @@
 <li>Is the code duplicated already elsewhere is any form?</li>
 <li>Can these two duplicate files be merged? (there&#8217;s a good chance one is overwriting the other)</li>
 <li>Are there any !important classes? If so, fix them.</li>
+<li>Replace padding and margin values with @box-spacing (1rem), @box-spacing-vertical (0.75rem) and @box-spacing horizontal (1rem). Obvious exceptions to this are spacing around text elements that need to follow the rules of the type contained. E.g. between breadcrumb items, or around heading.</li>
 <li>Are there any variables used? Make sure they use a variable defined in either base &gt; variables.less or base &gt; colors.less</li>
 <li>Are there any outdated mixins, or missing mixins?</li>
 <li>Is there anything that would warrent its own mixin?</li>
